[record_path_nodes_view] SVG works on smaller displays with scroll, also fixed api warnings
- for every node, we extend the svg by 200px in width

--- a/client/src/css/Record.css
+++ b/client/src/css/Record.css
@@ -1,3 +1,13 @@
-svg.custom path.link {
-    stroke-width: 0.5px;
+#tree_container {
+    max-width: 100vw;
+    overflow-x: auto;
+}
+
+.node {
+    cursor: pointer;
+}
+
+.node circle {
+    fill: black;
+    stroke-width: 10px;
 }
